z-index canvas fix

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -283,7 +283,7 @@ footer {
       width: 100%;
       height: 100%;
       position: absolute;
-      z-index: 9;
+      z-index: 1;
       display: block;
       top: 0;
       left: 0;
